--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "TsenzeR",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.13.0"
